26.2 first pass